--- a/loja/templates/produtos/addmarca.html
+++ b/loja/templates/produtos/addmarca.html
@@ -22,6 +22,7 @@
 
             </form>
             {% endif %}
+            <a class="btn btn-danger" style="margin-top: -40px; margin-left: 450px;" href="{{url_for('admin')}}">Cancelar</a>
 
         </div>
         <div class="col-md-3"></div>
