--- a/loja/templates/ADMIN/index.html
+++ b/loja/templates/ADMIN/index.html
@@ -64,8 +64,37 @@
                 <td>{{produto.marca.name}}</td>
                 <td><img src="{{url_for('static', filename='images/' + produto.image_1)}}" width="150" height="80"></td>
                 <td><a href="{{url_for('updateproduto',id=produto.id)}}" class="btn btn-success btn-sm">Editar</a></td>
-                <td>Deletar</td>
+                <td><!-- Button trigger modal -->
+                  <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal-{{produto.id}}">
+                    Deletar
+                  </button>
+                </td>
             </tr>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal-{{produto.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">{{produto.name}}</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p class="text-danger">Deseja realmente deltar o produto, {{produto.name}}?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning btn-sm" data-bs-dismiss="modal">Cancelar</button>
+        <form action="{{url_for('deleteproduto', id=produto.id)}}" method="POST">
+          <button type="submit" class="btn btn-Danger btn-sm">Deletar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
             {% endfor %}
         </tbody>
     </table>
