--- a/loja/templates/produtos/index.html
+++ b/loja/templates/produtos/index.html
@@ -2,10 +2,11 @@
 {% block content %}
 
 <div class="container">
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Pagina Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -29,14 +30,15 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Categorias
+              Categorias
             </a>
             <ul class="dropdown-menu">
-                {% for categoria in categorias %}
-                <li><a class="dropdown-item" href="{{ url_for('get_categoria', id=categoria.id) }}">{{ categoria.name }}</a></li>
-                {% endfor %}
+              {% for categoria in categorias %}
+              <li><a class="dropdown-item" href="{{ url_for('get_categoria', id=categoria.id) }}">{{ categoria.name
+                  }}</a></li>
+              {% endfor %}
             </ul>
-        </li>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -51,73 +53,164 @@
   </nav>
 </div>
 <div class="container">
-    <div class="row">
-        {% if marca %}
-        {% for m in marca %}
+  <div class="row">
+    {% if marca %}
+    {% for m in marca.items %}
 
-        <div class="col-md-3">
-          <div class="card">
-              <img src="{{url_for('static', filename='images/' + m.image_1)}}" alt="{{m.name}}" class="card-img-top" height="180">
-              <div class="card-body">
-                {% if m.discount > 0 %}
-                <h5 style="text-shadow: 1px 1px 2px #000; color: #f00; transform: rotate(-3deg); position:absolute; top: 50%; left: 25%; font-weight: 600;">Desconto {{m.discount}} %</p>
-                {% endif %}
-                <h4 class="text-center">{{m.name}}</h4>
-                <p class="text-center">Preco: R$ {{m.price}}</p>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="{{url_for('static', filename='images/' + m.image_1)}}" alt="{{m.name}}" class="card-img-top"
+          height="180">
+        <div class="card-body">
+          {% if m.discount > 0 %}
+          <h5
+            style="text-shadow: 1px 1px 2px #000; color: #f00; transform: rotate(-3deg); position:absolute; top: 50%; left: 25%; font-weight: 600;">
+            Desconto {{m.discount}} %</p>
+            {% endif %}
+            <h4 class="text-center">{{m.name}}</h4>
+            <p class="text-center">Preco: R$ {{m.price}}</p>
 
-              </div>
-              <div class="card-footer">
-                  <a href="#" class="float-left btn btn-sm btn-success">Detalhes Fabricante</a>
-                  <a href="#" class="float-right btn btn-sm btn-warning">Adicionar Carrinho</a>
-                </div>
-              </div>
-            </div>
+        </div>
+        <div class="card-footer">
+          <a href="#" class="float-left btn btn-sm btn-success">Detalhes Fabricante</a>
+          <a href="#" class="float-right btn btn-sm btn-warning">Adicionar Carrinho</a>
+        </div>
+      </div>
+    </div>
 
-            {% endfor %}
+    {% endfor %}
+  </div>
 
-            {% elif get_cat_prod %}            
-            {% for get_cat in get_cat_prod %}
-            <div class="col-md-3">
-              <div class="card">
-                  <img src="{{url_for('static', filename='images/' + get_cat.image_1)}}" alt="{{get_cat.name}}" class="card-img-top" height="180">
-                  <div class="card-body">
-                    {% if get_cat.discount > 0 %}
-                    <h5 style="text-shadow: 1px 1px 2px #000; color: #f00; transform: rotate(-3deg); position:absolute; top: 50%; left: 25%; font-weight: 600;">Desconto {{get_cat.discount}} %</p>
-                    {% endif %}
-                    <h4 class="text-center">{{get_cat.name}}</h4>
-                    <p class="text-center">Preco: R$ {{get_cat.price}}</p>
-    
-                  </div>
-                  <div class="card-footer">
-                      <a href="#" class="float-left btn btn-sm btn-success">Detalhes Fabricante</a>
-                      <a href="#" class="float-right btn btn-sm btn-warning">Adicionar Carrinho</a>
-                    </div>
-                  </div>
-                </div>
-                {% endfor %}
+  <div class="row">
+    <div class="col text-center">
+      {% if marca.has_prev %}
+      <a href="{{url_for('get_marca', id=get_m.id, pagina=get_cat_prod.prev_num)}}" class="btn btn-outline-success btn-sm mt-3">Anterior</a>
+      {% endif %}
+  
+  
+      {% for page_num in marca.iter_pages() %}
+      {% if page_num %}
+  
+      {% if marca.paginas == page_num %}
+      <a href="{{url_for('get_marca', id=get_m.id, pagina=page_num)}}" class="btn btn-success btn-sm mt-3">{{page_num}}</a>
+      {% else %}
+      <a href="{{url_for('get_marca', id=get_m.id, pagina=page_num)}}" class="btn btn-outline-success btn-sm mt-3">{{page_num}}</a>      {% endif %}
+  
+      {% else %}
+      ...
+      {% endif %}
+      {% endfor %}
+      {% if marca.has_next %}
+      <a href="{{url_for('get_marca',id=get_m.id, pagina=get_cat_prod.next_num)}}" class="btn btn-outline-success btn-sm mt-3">Proxima</a>
+      {% endif %}
+    </div>
+  </div>
 
-            {% else %}
 
-            {% for produto in produtos %}
-            <div class="col-md-3">
-                    <div class="card">
-                        <img src="{{url_for('static', filename='images/' + produto.image_1)}}" alt="{{produto.name}}" class="card-img-top" height="180">
-                        <div class="card-body">
-                          {% if produto.discount > 0 %}
-                          <h5 style="text-shadow: 1px 1px 2px #000; color: #f00; transform: rotate(-3deg); position:absolute; top: 50%; left: 25%; font-weight: 600;">Desconto {{produto.discount}} %</p>
-                          {% endif %}
-                          <h4 class="text-center">{{produto.name}}</h4>
-                          <p class="text-center">Preco: R$ {{produto.price}}</p>
+  <div class="row">
+    {% elif get_cat_prod %}
+    {% for get_cat in get_cat_prod.items %}
 
-                        </div>
-                        <div class="card-footer">
-                            <a href="#" class="float-left btn btn-sm btn-success">Detalhes Produto</a>
-                            <a href="#" class="float-right btn btn-sm btn-warning">Adicionar Carrinho</a>
-                          </div>
-                        </div>
-                      </div>
-                      {% endfor %}
-                    </div>
-                  </div>
+
+    <div class="col-md-3">
+      <div class="card">
+        <img src="{{url_for('static', filename='images/' + get_cat.image_1)}}" alt="{{get_cat.name}}"
+          class="card-img-top" height="180">
+        <div class="card-body">
+          {% if get_cat.discount > 0 %}
+          <h5
+            style="text-shadow: 1px 1px 2px #000; color: #f00; transform: rotate(-3deg); position:absolute; top: 50%; left: 25%; font-weight: 600;">
+            Desconto {{get_cat.discount}} %</p>
+            {% endif %}
+            <h4 class="text-center">{{get_cat.name}}</h4>
+            <p class="text-center">Preco: R$ {{get_cat.price}}</p>
+
+        </div>
+        <div class="card-footer">
+          <a href="#" class="float-left btn btn-sm btn-success">Detalhes Fabricante</a>
+          <a href="#" class="float-right btn btn-sm btn-warning">Adicionar Carrinho</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      {% if get_cat_prod.has_prev %}
+      <a href="{{url_for('get_categoria', id=get_cat.id, pagina=get_cat_prod.prev_num)}}" class="btn btn-outline-success btn-sm mt-3">Anterior</a>
+      {% endif %}
+  
+  
+      {% for page_num in get_cat_prod.iter_pages() %}
+      {% if page_num %}
+  
+      {% if get_cat_prod.paginas == page_num %}
+      <a href="{{url_for('get_categoria', id=get_cat.id, pagina=page_num)}}" class="btn btn-success btn-sm mt-3">{{page_num}}</a>
+      {% else %}
+      <a href="{{url_for('get_categoria', id=get_cat.id, pagina=page_num)}}" class="btn btn-outline-success btn-sm mt-3">{{page_num}}</a>      {% endif %}
+  
+      {% else %}
+      ...
+      {% endif %}
+      {% endfor %}
+      {% if get_cat_prod.has_next %}
+      <a href="{{url_for('get_categoria',id=get_cat.id, pagina=get_cat_prod.next_num)}}" class="btn btn-outline-success btn-sm mt-3">Proxima</a>
+      {% endif %}
+    </div>
+  </div>
+
+  {% else %}
+
+  {% for produto in produtos.items %}
+  <div class="col-md-3">
+    <div class="card">
+      <img src="{{url_for('static', filename='images/' + produto.image_1)}}" alt="{{produto.name}}" class="card-img-top"
+        height="180">
+      <div class="card-body">
+        {% if produto.discount > 0 %}
+        <h5
+          style="text-shadow: 1px 1px 2px #000; color: #f00; transform: rotate(-3deg); position:absolute; top: 50%; left: 25%; font-weight: 600;">
+          Desconto {{produto.discount}} %</p>
+          {% endif %}
+          <h4 class="text-center">{{produto.name}}</h4>
+          <p class="text-center">Preco: R$ {{produto.price}}</p>
+
+      </div>
+      <div class="card-footer">
+        <a href="#" class="float-left btn btn-sm btn-success">Detalhes Produto</a>
+        <a href="#" class="float-right btn btn-sm btn-warning">Adicionar Carrinho</a>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
+<div class="row">
+  <div class="col text-center">
+    {% if produtos.has_prev %}
+    <a href="{{url_for('home', pagina=produtos.prev_num)}}" class="btn btn-outline-success btn-sm mt-3">Anterior</a>
+    {% endif %}
+
+
+    {% for page_num in produtos.iter_pages() %}
+    {% if page_num %}
+
+    {% if produtos.paginas == page_num %}
+    <a href="{{url_for('home', pagina=page_num)}}" class="btn btn-success btn-sm mt-3">{{page_num}}</a>
+    {% else %}
+    <a href="{{url_for('home', pagina=page_num)}}" class="btn btn-outline-success btn-sm mt-3">{{page_num}}</a>
+    {% endif %}
+
+    {% else %}
+    ...
+    {% endif %}
+    {% endfor %}
+    {% if produtos.has_next %}
+    <a href="{{url_for('home', pagina=produtos.next_num)}}" class="btn btn-outline-success btn-sm mt-3">Proxima</a>
+    {% endif %}
+  </div>
+</div>
 {% endif %}
+
+</div>
+</div>
 {% endblock content %}
