--- a/loja/templates/produtos/pagina_unica.html
+++ b/loja/templates/produtos/pagina_unica.html
@@ -63,7 +63,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6" id="m_image">
-            <img src="{{url_for('static', filename='images/' + produto.image_1)}}" alt="{{produto.name}}" height="200">
+            <img src="{{url_for('static', filename='images/' + produto.image_1)}}" alt="{{produto.name}}" height="400" width="400">
         </div>
 
         <div class="col-md-6">
@@ -74,25 +74,58 @@
             <b>Desconto do Produto: {{produto.discount}} %</b>
 
             {% endif %}
-            <br>
-            <br>
+            <hr>
             <b>Descricao do Produto:</b>
             <p>{{produto.desc}}</p>
+            <hr>
+            <form action="{{url_for('AddCart')}}" method="POST">
+                <input type="hidden" name="produto_id" value="{{produto.id}}">
+                <button type="submit" class="btn btn-sm btn-warning">Adicionar ao Carrinho</button>
+                <label for="">Quantidade: </label>
+                <input type="number" name="quantity" id="" value="1" min="1" max="{{produto.stock}}">
+                {% set colors = produto.colors.split(',') %}
+                <label for="colors">Cor do Produto: </label>
+                <select name="colors" id="">
+                    {% for color in colors %}
+                    {% set col = color.split(':') %}
+                    <option value="{{col[0]}}">"{{col[0]|capitalize}}"</option>
+                    {% endfor %}
+
+                </select>
+
+
+
+            </form>
+
 
 
 
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
-            <img src="{{url_for('static', filename='images/' + produto.image_1)}}" alt="{{produto.name}}" height="100">
-            <img src="{{url_for('static', filename='images/' + produto.image_2)}}" alt="{{produto.name}}" height="100">
-            <img src="{{url_for('static', filename='images/' + produto.image_3)}}" alt="{{produto.name}}" height="100">
+        <div class="col-md-12 mt-3" id="s_image">
+            <hr>
+            <img src="{{url_for('static', filename='images/' + produto.image_1)}}" alt="{{produto.name}}" height="150" width="100" class="p-3">
+            <img src="{{url_for('static', filename='images/' + produto.image_2)}}" alt="{{produto.name}}" height="150" width="100" class="p-3">
+            <img src="{{url_for('static', filename='images/' + produto.image_3)}}" alt="{{produto.name}}" height="150" width="100" class="p-3">
         </div>
     </div>
 </div>
 
+<script>
+    var m_image = document.getElementById('m_image');
+    var s_image = document.getElementById('s_image').getElementsByTagName('img');
 
+    for(var i=0; i < s_image.length;i++){
+        s_image[i].addEventListener('click', full_image);
+    }
+
+    function full_image(){
+        var ImageSRC = this.getAttribute('src');
+        m_image.innerHTML = "<img src='" + ImageSRC + "' height='400' width='400'>";
+    }
+
+</script>
 
 
 
