--- a/loja/templates/produtos/index.html
+++ b/loja/templates/produtos/index.html
@@ -41,7 +41,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="false" tabindex="-1">Carrinho({{session['LojainCarrinho']|length}})</a>
+            <a class="nav-link" href="{{url_for('getCart')}}" tabindex="-1">Carrinho({{session['LojainCarrinho']|length}})</a>
         </li>
 
         </ul>
