--- a/loja/templates/produtos/pagina_unica.html
+++ b/loja/templates/produtos/pagina_unica.html
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="false" tabindex="-1">Carrinho({{session['LojainCarrinho']|length}})</a>
+                        <a class="nav-link" href="#" tabindex="-1">Carrinho({{session['LojainCarrinho']|length}})</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
