--- a/loja/templates/produtos/carros.html
+++ b/loja/templates/produtos/carros.html
@@ -3,16 +3,15 @@
 
 {% include 'navbar.html' %}
 
-
-
-
 <div class="container mt-4">
+    {% include '_messages.html' %}
     <h1>Meu Carrinho</h1>
     <div class="row">
         <div class="col-md-12">
             <table class="table table-sm">
                 <thead>
                     <th>Codigo</th>
+                    <th>Imagem</th>
                     <th>Nome</th>
                     <th>Cor</th>
                     <th>Preco</th>
@@ -28,21 +27,37 @@
 
                     <tr>
                         <td>{{loop.index}}</td>
+                        <td><img src="{{url_for('static', filename='images/'+produto.image_1)}}" alt="{{produto.name}}"
+                                width="50" height="50"></td>
                         <td>{{produto.name}}</td>
-                        <td>{{produto.color}}</td>
-                        <td>R$ {{produto.price}}</td>
-                        <td>{{produto.quantity}}</td>
-                        {% if produto.discount > 0 %}
-                        <td>{{produto.discount}} % &nbsp; = {{discount}}</td>
-                        {% else %}
+                        <form action="{{url_for('updateCarro',code=key)}}" method="POST">
 
-                        <td></td>
-                        {% endif %}
+                            <td>
+                                {% set colors = produto.colors.split(',') %}
+                                <label for="colors">Cor do Produto: </label>
+                                <select name="color" id="color">
+                                    <option value="{{produto.color}}" style="display: none;">{{produto.color|capitalize}}</option>
+                                    {% for color in colors %}
+                                    {% set col = color.split(':') %}
+                                    <option value="{{col[0]}}">"{{col[0]|capitalize}}"</option>
+                                    {% endfor %}
+                                </select>
+                            </td>
 
-                        {% set subtotal = produto.quantity|int * produto.price|float %}
-                        <td>{{"%0.2f"|format ((subtotal|float) - discount|float)}}</td>
+                            <td>R$ {{produto.price}}</td>
+                            <td><input type="number" name="quantity" min="1" max="99" value="{{produto.quantity}}"></td>
+                            {% if produto.discount > 0 %}
+                            <td>{{produto.discount}} % &nbsp; = {{discount}}</td>
+                            {% else %}
 
-                        <td><a href="#">Atualizar</a></td>
+                            <td></td>
+                            {% endif %}
+
+                            {% set subtotal = produto.quantity|int * produto.price|float %}
+                            <td>{{"%0.2f"|format ((subtotal|float) - discount|float)}}</td>
+
+                            <td><button type="submit" class="btn btn-sm btn-success" href="#">Atualizar</button></td>
+                        </form>
                         <td><a href="#">Remover</a></td>
                     </tr>
                     {% endfor %}
