--- a/loja/templates/navbar.html
+++ b/loja/templates/navbar.html
@@ -42,9 +42,9 @@
           </li>
   
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+          <form class="form-inline my-2 my-lg-0" method="POST">
+            <input class="form-control mr-sm-2" type="text" placeholder="Pequisar Produto" autofocus="autofocus" name="search_string" aria-label="Search">
+            <input class="btn btn-outline-success my-2 my-sm-0" type="submit" formaction="/search" value="Pesquisar">
           </form>
         </div>
       </div>
