--- a/loja/templates/ADMIN/registrar.html
+++ b/loja/templates/ADMIN/registrar.html
@@ -9,6 +9,7 @@
     <div class="text-center h1 text-success">Pagina de Registro</div>
     {% from "_formhelpers.html" import render_field %}
     <form method="post" enctype="multipart/form-data">
+        {{form.csrf_token}}
         <div>
             {{ render_field(form.name, class="form-control") }}
             {{ render_field(form.username, class="form-control") }}
