--- a/loja/templates/navbar.html
+++ b/loja/templates/navbar.html
@@ -36,6 +36,25 @@
                 {% endfor %}
               </ul>
             </li>
+            <!-- Bloco de authenticacao do usuario -->
+            {% if current_user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('cliente_logout')}}" >{{current_user.name}}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('cliente_logout')}}" >Sair</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('cadastrar_clientes')}}" >Cadastrar</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('clienteLogin')}}" >Sair</a>
+            </li>
+            {% endif %}
+            <!-- FIM Bloco de authenticacao do usuario -->
+
   
             <li class="nav-item">
               <a class="nav-link" href="{{url_for('getCart')}}" tabindex="-1">Carrinho({{session['LojainCarrinho']|length}})</a>
