--- a/loja/templates/cliente/pdf.html
+++ b/loja/templates/cliente/pdf.html
@@ -1,5 +1,16 @@
-{% extends 'layouts.html' %}
-{% block content %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>Gerar Pdf</title>
+  
+    </head>
+  <body>
+
+
+
 {% include 'navbar.html' %}
 <div class="container mt-4">
     {% include '_messages.html' %}
@@ -56,18 +67,11 @@
                 <tr>
                     <td></td>
 
-                    <td><a href="#" class="btn btn-success btn-sm float-start">Processar Compra</a></td>
                     <td colspan="3">Imposto:&nbsp; R$ {{imposto}}</td>
                     <td colspan="5">Valor Pagar:&nbsp; R$ {{gTotal}} </td>
-                    <td>
-                        <form action="{{url_for('get_pdf', notafiscal=pedidos.notafiscal)}}" method="POST">
-                            <button type="submit" class="btn btn-warning btn-sm float-end">Gerar PDF</button>
-                        </form>
-                    </td>
                 </tr>
             </table>
         </div>
     </div>
 </div>
 
-{% endblock content %}
