--- a/loja/templates/cliente/pedido.html
+++ b/loja/templates/cliente/pedido.html
@@ -55,8 +55,10 @@
             <table class="table table-sm">
                 <tr>
                     <td></td>
+                    <!-- Trecho independente -->
+                    <td><a href="/buy/{{notafiscal}}" class="btn btn-success btn-sm float-start">Processar Compra</a></td>
+                    <!-- Fim Trecho independente -->
 
-                    <td><a href="#" class="btn btn-success btn-sm float-start">Processar Compra</a></td>
                     <td colspan="3">Imposto:&nbsp; R$ {{imposto}}</td>
                     <td colspan="5">Valor Pagar:&nbsp; R$ {{gTotal}} </td>
                     <td>
